# ElasticFusionPlusPlus

./: README.md
Core/src/: CMakeLists.txt  CMakeLists.txt.bak  ElasticFusion.cpp  ElasticFusion.h  Ferns.cpp
Core/src/Cuda/: cudafuncs.cu
Core/src/Utils/: MyFrame.cpp  MyFrame.h  PnpSolver.cpp  PnpSolver.h  RGBDOdometry.cpp  RGBDOdometry.h
GUI/src/: CMakeLists.txt  FindRealSense.cmake  FindRealSense2.cmake.bak  MainController.cpp
GUI/src/Tools/: LiveLogReader.cpp  LiveLogReader.h  RealSense2Interface.cpp  RealSense2Interface.cpp.1  RealSense2Interface.cpp.bak  RealSense2Interface.h  RealSense2Interface.h.bak
